fix(styles): allow `ExpandableContainer` to display overflow when expanded

--- a/client/src/common/components/ExpandableContainer/ExpandableContainer.module.css
+++ b/client/src/common/components/ExpandableContainer/ExpandableContainer.module.css
@@ -5,5 +5,6 @@
 }
 
 .expandable-container.expanded {
+    overflow: visible;
     height: auto;
 }
